--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p>A passionate web developer dedicated to crafting exceptional online experiences</p>
         </div>
         <div class="home-img">
-            <img src="../../assets/images/rence_pogi1.png" alt="Rence_pogi">
+            <img src="/assets/images/rence_pogi1.png" alt="Rence_pogi">
         </div>
     </section>
     <div class="share" id="share">
