--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
                     <h3 class="logo-rence">Rence.</h3>
                 </a>
             </div>
+            <div class="menu">
+                <i class='bx bx-menu' ></i>
+            </div>
             <div class="parent-link">
                 <a href="#" class="social-links active">About</a>
                 <a class="social-links">Projects</a>
